<resources>
    <string name="app_name">FitnestX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_sub_txt">Everybody Can Train</string>
    <string name="fitnest">Fitnest</string>
    <string name="x">X</string>
    <string name="getstarted">GetStarted</string>
    <string name="splash_track_txt">Don\'t worry if you have trouble determining your goals, we can help you determine your goals and track your goals.</string>
    <string name="nextbtn">nextBtn</string>
    <string name="girlimage">girlImage</string>
    <string name="splash_head_txt">Track Your Goals</string>
    <string name="back_vector">background_vector</string>
    <string name="get_burn">Get Burn</string>
    <string name="get_burn_txt">Let\'s keep burning to achive yours goals, it hurts only temporarily, if you give up now you will be in pain forever.</string>
    <string name="eat_well">Eat Well</string>
    <string name="eat_well_txt">Let\'s start a healthy lifestyle with us, we can determine your diet every day, healthy eating is fun.</string>
    <string name="sleep_quality">Improve Sleep Quality</string>
    <string name="sleep_quality_txt">Improve the quality of your sleep with us, good quality sleep can bring a good mood ini the morning.</string>
    <string name="privacy_policy">By continuing you accept our Privacy Policy and Term of Use.</string>
    <string name="registerBtn">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hey_there">Hey there,</string>
    <string name="or">Or</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="account_txt">Already have an account?</string>
    <string name="login_txt">Login</string>
    <string name="state">State</string>
    <string name="banner_image">BannerImage</string>
    <string name="complete_profile">Let\'s complete your profile</string>
    <string name="about_you">It will help us to know more about you!</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="weight">Your Weight in KG</string>
    <string name="height">Your Height in CM</string>
    <string name="next">Next</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="go_to_home">Go To Home</string>
    <string name="profile_image">Profile Image</string>
    <string name="angad_gupta">Angad Gupta</string>
    <string name="program">Lose a Fat Program</string>
    <string name="edit">Edit</string>
    <string name="_180cm">180cm</string>
    <string name="high">Height</string>
    <string name="_65kg">65kg</string>
    <string name="wei">Weight</string>
    <string name="_22_yo">22 yo</string>
    <string name="age">Age</string>
    <string name="account">Account</string>
    <string name="personal_data">Personal Data</string>
    <string name="document">Document</string>
    <string name="achievement">Achievement</string>
    <string name="graph">Graph</string>
    <string name="activity_history">Activity History</string>
    <string name="chart">Chart</string>
    <string name="workout_progress">Workout Progress</string>
    <string name="notification">Notification</string>
    <string name="pop_up_notification">Pop-up Notification</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact Us</string>
    <string name="message">Message</string>
    <string name="shield">Shield</string>
    <string name="privacy">Privacy Policy</string>
    <string name="setting">Setting</string>
    <string name="bmi">BMI (Body Mass Index)</string>
    <string name="normal">You have a normal weight</string>
    <string name="view_more">View More</string>
    <string name="today_target">Today Target</string>
    <string name="check">Check</string>
    <string name="activity_status">Activity Status</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_80_bpm">80 BPM</string>
    <string name="water_intake">Water Intake</string>
    <string name="sleep">Sleep</string>
    <string name="calories">Calories</string>
    <string name="workout_p">Workout Progress</string>
    <string name="lastest_workout">Lastest Workout</string>
</resources>