<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup_and_login.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hey_there"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:textColor="@color/dark_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textStyle="bold"/>


        <!--    Email Input Field   -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="40dp"
            app:boxCornerRadiusTopStart="@dimen/inputBoxRadius"
            app:boxCornerRadiusTopEnd="@dimen/inputBoxRadius"
            app:boxCornerRadiusBottomStart="@dimen/inputBoxRadius"
            app:boxCornerRadiusBottomEnd="@dimen/inputBoxRadius"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_message"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--    Password Input Field    -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:boxCornerRadiusTopStart="@dimen/inputBoxRadius"
            app:boxCornerRadiusTopEnd="@dimen/inputBoxRadius"
            app:boxCornerRadiusBottomStart="@dimen/inputBoxRadius"
            app:boxCornerRadiusBottomEnd="@dimen/inputBoxRadius">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="10"
                android:textSize="18sp"/>

        </com.google.android.material.textfield.TextInputLayout>

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/forgot_your_password"
             android:layout_gravity="center"
             android:textSize="18sp"/>

        <View
            android:layout_width="180dp"
            android:layout_height="1dp"
            android:background="@color/light_gray"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="190dp"
            android:paddingVertical="15dp"
            android:text="@string/login_txt"
            android:textSize="20sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:backgroundTint="@color/malibu"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="110dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:background="@color/lighter_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="10dp"/>

            <View
                android:layout_width="110dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:background="@color/lighter_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/google_icon"
                android:src="@drawable/ic_google"
                tools:ignore="HardcodedText" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/facebook_icon"
                android:src="@drawable/ic_facebook"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/don_t_have_an_account_yet"/>

            <TextView
                android:id="@+id/registerTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/registerBtn"
                android:layout_marginStart="5dp"
                android:textColor="@color/perfume"/>

    </LinearLayout>

</LinearLayout>