<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".signup_and_login.RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hey_there"
                android:textSize="20sp"
                android:textColor="@color/dark_gray"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_an_account"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        <!--    First Name Input Field  -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="30dp"
                app:boxCornerRadiusTopStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusTopEnd="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomEnd="@dimen/inputBoxRadius"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:hint="@string/first_name"
                    android:textSize="18sp"/>

            </com.google.android.material.textfield.TextInputLayout>

        <!--    Last Name Input Field   -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusTopEnd="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomEnd="@dimen/inputBoxRadius"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawablePadding="10dp"
                    android:hint="@string/last_name"
                    android:textSize="18sp"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

        <!--    Email Input Field   -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusTopStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusTopEnd="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomEnd="@dimen/inputBoxRadius"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_message"
                    android:drawablePadding="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="18sp"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

        <!--    Password Input Field    -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:boxCornerRadiusTopStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusTopEnd="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomStart="@dimen/inputBoxRadius"
                app:boxCornerRadiusBottomEnd="@dimen/inputBoxRadius">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:textSize="18sp"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy"
                    android:textSize="18sp"
                    android:textColor="@color/dark_gray"/>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/malibu"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingVertical="15dp"
                android:text="@string/registerBtn"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="110dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@color/lighter_gray"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginHorizontal="10dp"/>

                <View
                    android:layout_width="110dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="5dp"
                    android:background="@color/lighter_gray"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="20dp"
                    android:contentDescription="@string/google_icon"
                    android:src="@drawable/ic_google"
                    tools:ignore="HardcodedText" />

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/facebook_icon"
                    android:src="@drawable/ic_facebook"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:text="@string/account_txt"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/login_txt"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/perfume"/>

            </LinearLayout>

        </LinearLayout>

</ScrollView>

<!--  Start From Here After break  -->